<resources>
    <string name="app_name">afternoon</string>
    <string name="todo">TODO</string>
    <string name="myfrance">My\nFrance</string>
    <string name="home">Home</string>
    <string name="travel">Travel</string>
    <string name="account">Account</string>
    <string name="join_us_now">Join us now</string>
    <string name="to_discover_more_sights_of_france">to discover more sights of France</string>
    <string name="sign_in_up">Sign in/up</string>
    <string name="name">Name</string>
    <string name="example_example_eu">example@example.eu</string>
    <string name="your_email_addres">Your email addres</string>
    <string name="your_password">Your password</string>
    <string name="read_user_agreement">READ USER AGREEMENT</string>
    <string name="to_change_the_other_account">to change the other account</string>
    <string name="sign_out">Sign out</string>
    <string name="content">Content</string>

    <string name="toureiffel">Металлическая башня в центре Парижа, самая узнаваемая его архитектурная достопримечательность.

Названа в честь главного конструктора Гюстава Эйфеля. Сам Эйфель называл её просто «300-метровая башня».</string>
    
    <string name="socrecoeur">Католический храм в Париже, построенный в 1875–1914 годах по проекту архитектора Поля Абади в римско-византийском стиле.

Храм расположен на вершине холма Монмартр, в самой высокой точке (130 м) города.

Высота основного купола базилики — 83 м, высота колокольни — около 100 м.</string>

    <string name="arcdetriophe">Монумент в 8-м округе Парижа на площади Шарля де Голля (Звезды).

Был возведён в 1806–1836 годах по проекту архитектора французского ампира Жана-Франсуа Шальгрена. Проект арки «в древнеримском стиле» был разработан по распоряжению Наполеона Бонапарта в ознаменование побед его «Великой армии». За основу была взята композиция однопролётной Триумфальной арки Тита на римском Форуме.</string>

    <string name="palaisRoyal">Архитектурный ансамбль в Париже, который состоит из королевского дворца, площади перед ним и живописного сада.

Комплекс, спроектированный Жаком Лемерсье, находится в самом сердце города напротив Лувра. Сейчас в здании дворца располагаются правительственные учреждения, а также один из старейших парижских театров — Comedie Francaise, репертуар которого состоит из французской классики.

Сад Пале-Рояль, расположенный позади дворца, является излюбленным местом не только туристов, но и парижан. Тихий парк окружён четырёхэтажными строениями XVIII в., в аркадах которых сейчас располагаются магазины антиквариата, брендовой одежды и парфюмерии.</string>
    <string name="favorite">Favorite</string>
</resources>