<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="50dp"
        app:cardElevation="8dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/home"
        app:layout_constraintEnd_toStartOf="@+id/myfrance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/art_icon_la_tour_eiffel"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="123dp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/myfrance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="424dp"
        android:text="@string/myfrance"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home"
        android:layout_width="224dp"
        android:layout_height="92dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_normal_background"
        android:padding="4dp"
        android:text="@string/home"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/icon_home_outline"
        app:iconGravity="textStart"
        app:iconPadding="11dp"
        app:iconSize="30dp"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myfrance"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/travel"
        android:layout_width="224dp"
        android:layout_height="92dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/button_normal_background"
        android:padding="4dp"
        android:text="@string/travel"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/icon_map_outline"
        app:iconGravity="textStart"
        app:iconPadding="11dp"
        app:iconSize="30dp"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/account"
        android:layout_width="224dp"
        android:layout_height="92dp"
        android:layout_marginTop="184dp"
        android:background="@drawable/button_background"
        android:padding="4dp"
        android:text="@string/account"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:backgroundTint="@color/gray"
        app:icon="@drawable/icon_account_circle_outline"
        app:iconGravity="textStart"
        app:iconPadding="1dp"
        app:iconSize="30dp"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="440dp"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/account"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/icon_account_circle_outline" />

        <Button
            android:id="@+id/signout"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_normal_background"
            android:text="@string/sign_out"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/to_change_the_other_account"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/favorite"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:gravity="center" />

    </LinearLayout>

    <TextView
        android:id="@+id/signinup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_up"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.728" />

    <EditText
        android:id="@+id/email"
        android:layout_width="380dp"
        android:layout_height="72dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="352dp"
        android:autofillHints=""
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:text="@string/example_example_eu"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password"
        android:layout_width="380dp"
        android:layout_height="72dp"
        android:autofillHints=""
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10dp"
        android:text="@string/example_example_eu"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.103"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_email_addres"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/signinup"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_password"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.92"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/sign"
        android:layout_width="128dp"
        android:layout_height="61dp"
        android:backgroundTint="@color/black"
        android:text="@string/sign_in_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.113"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/visible"
        android:layout_width="54dp"
        android:layout_height="49dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="@+id/password"
        app:layout_constraintVertical_bias="0.333"
        app:srcCompat="@drawable/icon_eye_circle"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>