<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="50dp"
        app:cardElevation="8dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/home"
        app:layout_constraintEnd_toStartOf="@+id/myfrance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/art_icon_la_tour_eiffel"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="123dp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/myfrance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="424dp"
        android:text="@string/myfrance"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home"
        android:layout_width="224dp"
        android:layout_height="92dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_normal_background"
        android:padding="4dp"
        android:text="@string/home"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/icon_home_outline"
        app:iconGravity="textStart"
        app:iconPadding="11dp"
        app:iconSize="30dp"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/map"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myfrance"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/travel"
        android:layout_width="224dp"
        android:layout_height="92dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/button_normal_background"
        android:padding="4dp"
        android:text="@string/travel"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/icon_map_outline"
        app:iconGravity="textStart"
        app:backgroundTint="@color/gray"
        app:iconPadding="11dp"
        app:iconSize="30dp"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/account"
        android:layout_width="224dp"
        android:layout_height="92dp"
        android:layout_marginTop="184dp"
        android:background="@drawable/button_background"
        android:padding="4dp"
        android:text="@string/account"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/icon_account_circle_outline"
        app:iconGravity="textStart"
        app:iconPadding="1dp"
        app:iconSize="30dp"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/map"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/map"
        android:layout_width="1060dp"
        android:layout_height="892dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/travel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/map_paris_city"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/toureiffel"
        android:layout_width="53dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toStartOf="@+id/map"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461"
        app:srcCompat="@drawable/icon_map_marker" />

    <ImageView
        android:id="@+id/socrecoeur"
        android:layout_width="53dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="@+id/map"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244"
        app:srcCompat="@drawable/icon_map_marker" />

    <ImageView
        android:id="@+id/arcdetriophe"
        android:layout_width="53dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="@+id/map"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.331"
        app:srcCompat="@drawable/icon_map_marker" />

    <ImageView
        android:id="@+id/palaisRoyal"
        android:layout_width="53dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="@+id/map"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.395"
        app:srcCompat="@drawable/icon_map_marker" />


</androidx.constraintlayout.widget.ConstraintLayout>